--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.29.1",
     "prettier": "^2.3.1",
     "puppeteer": "^10.0.0",
     "random-useragent": "^0.5.0"
